// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getAvailableModulesTool should have a consistent return structure: structure 1`] = `
[
  "getAvailableModules",
  {
    "description": "Retrieves a list of available Patternfly react-core modules in the current environment.",
    "inputSchema": {
      "packageName": ZodDefault {
        "_def": {
          "defaultValue": [Function],
          "description": "Name of the patternfly package to get modules for",
          "errorMap": [Function],
          "innerType": ZodEnum {
            "_def": {
              "description": "Name of the patternfly package to get modules for",
              "typeName": "ZodEnum",
              "values": [
                "@patternfly/react-core",
                "@patternfly/react-icons",
                "@patternfly/react-table",
                "@patternfly/react-data-view",
                "@patternfly/react-component-groups",
              ],
            },
            "and": [Function],
            "array": [Function],
            "brand": [Function],
            "catch": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "promise": [Function],
            "readonly": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
          "typeName": "ZodDefault",
        },
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "promise": [Function],
        "readonly": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
  },
  [Function],
]
`;

exports[`getAvailableModulesTool, callback should handle modules with special characters in names 1`] = `
{
  "content": [
    {
      "text": "Button-Group;Data.Table;Nav_Item",
      "type": "text",
    },
  ],
}
`;

exports[`getAvailableModulesTool, callback should return empty string when modules map is empty 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`getAvailableModulesTool, callback should return modules list separated by semicolons 1`] = `
{
  "content": [
    {
      "text": "Button;Card;Table",
      "type": "text",
    },
  ],
}
`;
